# ImageToAscii

./: CMakeLists.txt  compile_flags.txt
linux-bin/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
src/: framebuffer.c  framebuffer.h  main.c
